Refactor api server and update registre parcellaire components
